--- a/class05/Class07-08.Rmd
+++ b/class05/Class07-08.Rmd
@@ -2,7 +2,7 @@
 title: "Class08"
 author: "STEPHANIE CURTIS"
 date: "2/6/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
